*** empty log message ***
(bzr r2909)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2004-06-06  Bryce Harrington <bryce@bryceharrington.com>
 
 	* libnrtype/nr-type-xft.cpp, libnrtype/nr-font.cpp,
-  	  libnrtype/nr-rasterfont.cpp, libnrtype/nr-type-directory.cpp:   
+  	  libnrtype/nr-rasterfont.cpp, libnrtype/nr-type-directory.cpp,
+	  libnrtype/nr-typeface.cpp:   
 
 	Documenting the routines
 
