--- a/src/ecma/README
+++ b/src/ecma/README
@@ -53,10 +53,10 @@ Mozilla.org's license for these files is at:
 http://www.mozilla.org/MPL/license-policy.html
 
 ...which describes their tri-license scheme, allowing developers to use
-one of:  the Mozilla Public License (MPL), the Gnu Public License (GPL)
-and the Limited Gnu Public License (LGPL).   Since we do not intend to
-modify Mozilla's source code in any fashion, we wish to use their library
-under the LGPL.  Many thanks to Mozilla.org for their generosity.
+one of:  the Mozilla Public License (MPL), the GNU General Public License
+(GPL) and the GNU Limited General Public License (LGPL).   Since we do not
+intend to modify Mozilla's source code in any fashion, we wish to use their
+library under the LGPL.  Many thanks to Mozilla.org for their generosity.
 
 
 
