--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-0609   Carl Hetherington  <inkscape@carlh.net>
+
+	* src/desktop-snap.cpp, src/desktop-snap.h: Coding style fixes.
+	Use NR::Coord rather than double where appropriate.  Added some
+	comments.  Use NR::Dim2	where appropriate.  Use NR_HUGE rather
+	than hardcoded 1e18s.
+
+	* src/rect-context.cpp, src/nodepath.cpp, src/arc-context.cpp:
+	Adapt for changes to sp_desktop_dim_snap prototype.
+
+	* src/select-context.cpp:
+	Adapt for changes to sp_desktop_dim_snap_list prototype.	
+
 2004-06-08  MenTaLguY  <mental@rydia.net>
 
 	* src/display/sp-canvas.h, src/livarot/DblLinked.h,
