--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/node-context.h, src/selcue.h, src/sp-pattern.h,
+	  src/widgets/sp-color-wheel-selector.h:
+	  Add missing includes as found by src/check-header-compile.
+
 	* src/Makefile_insert:
 	* src/sp-use-reference.cpp:
 	* src/sp-use-reference.h:
