--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-06-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/main.cpp: Greater conformance to CodingStyle.
+
 	* src/node-context.h, src/selcue.h, src/sp-pattern.h,
 	  src/widgets/sp-color-wheel-selector.h:
 	  Add missing includes as found by src/check-header-compile.
