--- a/po/hu.po
+++ b/po/hu.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: hu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-06-13 12:11+0200\n"
-"PO-Revision-Date: 2004-06-07 21:07+0200\n"
+"PO-Revision-Date: 2004-06-13 17:18+0200\n"
 "Last-Translator: Arpad Biro <biro_arpad@yahoo.com>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
@@ -181,8 +181,7 @@ msgstr "Az objektumok bal oldalainak egyenletes távolságban való elrendezése"
 
 #: src/dialogs/align.cpp:349
 msgid "Distribute centers of objects at even distances horizontally"
-msgstr ""
-"Az objektumok közepének egyenletes távolságban való vízszintes elrendezése"
+msgstr "Az objektumok közepének egyenletes távolságban való vízszintes elrendezése"
 
 #: src/dialogs/align.cpp:356
 msgid "Distribute right sides of objects at even distances"
@@ -198,8 +197,7 @@ msgstr "Az objektumok tetejének egyenletes távolságban való elrendezése"
 
 #: src/dialogs/align.cpp:378
 msgid "Distribute centers of objects at even distances vertically"
-msgstr ""
-"Az objektumok közepének egyenletes távolságban való függõleges elrendezése"
+msgstr "Az objektumok közepének egyenletes távolságban való függõleges elrendezése"
 
 #: src/dialogs/align.cpp:385
 msgid "Distribute bottom sides of objects at even distances"
@@ -523,8 +521,7 @@ msgid "Show selection cue"
 msgstr "Kijelölési jel megjelenítése"
 
 #: src/dialogs/display-settings.cpp:627
-msgid ""
-"Whether selected objects display a selection cue (the same as in selector)"
+msgid "Whether selected objects display a selection cue (the same as in selector)"
 msgstr ""
 "A kijelölt objektumoknál megjelenik-e a megfelelõ kijelölési jelzõ (a "
 "kijelölõeszközzel megegyezõen)"
@@ -687,8 +684,7 @@ msgid "> and < scale by:"
 msgstr "A \">\" és a \"<\" billentyû méretezési mértéke:"
 
 #: src/dialogs/display-settings.cpp:867
-msgid ""
-"Pressing > or < scales selection up or down by this increment (in points)"
+msgid "Pressing > or < scales selection up or down by this increment (in points)"
 msgstr ""
 "A \">\" illetve a \"<\" billentyû lenyomása ennyivel méretezi át (pontban "
 "mérve) a kijelölést"
@@ -698,8 +694,7 @@ msgid "Inset/Outset by:"
 msgstr "Zsugorítás/nyújtás mértéke:"
 
 #: src/dialogs/display-settings.cpp:878
-msgid ""
-"Inset and Outset commands displace the path by this distance (in points)"
+msgid "Inset and Outset commands displace the path by this distance (in points)"
 msgstr ""
 "A zsugorítási és a nyújtási mûvelet ekkora (pontokban megadott) távolsággal "
 "mozdítja el a láncot"
@@ -847,8 +842,7 @@ msgstr "Párhuzamosan elmozdulnak"
 
 #: src/dialogs/display-settings.cpp:1042
 msgid "Clones are translated by the same vector as their original."
-msgstr ""
-"A klónok ugyanazzal a vektorral lesznek elmozdítva, mint az eredeti objektum"
+msgstr "A klónok ugyanazzal a vektorral lesznek elmozdítva, mint az eredeti objektum"
 
 #: src/dialogs/display-settings.cpp:1048
 msgid "Stay unmoved"
@@ -918,13 +912,12 @@ msgstr ""
 "átméretezve"
 
 #: src/dialogs/display-settings.cpp:1114
-#, fuzzy
 msgid "Transform pattern fill"
-msgstr "Transzformációs mátrix"
+msgstr "Kitöltõminta transzformációja"
 
 #: src/dialogs/display-settings.cpp:1115
 msgid "Apply the transform of an object to its pattern fill"
-msgstr ""
+msgstr "Objektumtranszformáció alkalmazása az objektum kitöltõmintájára is"
 
 #: src/dialogs/display-settings.cpp:1123
 msgid "Store transformation:"
@@ -974,15 +967,17 @@ msgid "dpi"
 msgstr "DPI"
 
 #: src/dialogs/display-settings.cpp:1162
-#, fuzzy
 msgid "Import bitmap as <image>"
-msgstr "Bitkép vagy SVG-kép importálása a dokumentumba"
+msgstr "Bitkép importálása <image>-ként"
 
 #: src/dialogs/display-settings.cpp:1163
 msgid ""
 "When on, an imported bitmap creates an <image> element; otherwise it is a "
 "rect with bitmap fill"
 msgstr ""
+"Ha a beállítás be van kapcsolva, akkor az importált bitképekhez egy "
+"<image> elem jön létre; ha pedig ki van kapcsolva, akkor téglalap "
+"jön létre bitkép-kitöltéssel"
 
 #: src/dialogs/display-settings.cpp:1170
 msgid "Max recent documents:"
@@ -990,8 +985,7 @@ msgstr "Legutóbbi dokumentumok maximális száma:"
 
 #: src/dialogs/display-settings.cpp:1171
 msgid "The maximum length of the Open Recent list in the File menu"
-msgstr ""
-"A Fájl menüben megjelenõ \"Legutóbbi megnyitása\" lista maximális hossza"
+msgstr "A Fájl menüben megjelenõ \"Legutóbbi megnyitása\" lista maximális hossza"
 
 #: src/dialogs/display-settings.cpp:1181
 msgid "Simplification threshold:"
@@ -1259,8 +1253,7 @@ msgstr "Szö_veg: "
 
 #: src/dialogs/find.cpp:629
 msgid "Find objects by their text content (exact or partial match)"
-msgstr ""
-"Objektumok keresése a szövegtartalmuk alapján (pontos vagy részleges egyezés)"
+msgstr "Objektumok keresése a szövegtartalmuk alapján (pontos vagy részleges egyezés)"
 
 #: src/dialogs/find.cpp:630
 msgid "_ID: "
@@ -1277,8 +1270,7 @@ msgid "_Style: "
 msgstr "_Stílus: "
 
 #: src/dialogs/find.cpp:631
-msgid ""
-"Find objects by the value of the style attribute (exact or partial match)"
+msgid "Find objects by the value of the style attribute (exact or partial match)"
 msgstr ""
 "Objektumok keresése a stílusuk (a \"style\" tulajdonságuk értéke) alapján "
 "(pontos vagy részleges egyezés)"
@@ -2131,14 +2123,12 @@ msgid "Inkscape encountered an internal error and will close now.\n"
 msgstr "Az Inkscape belsõ hibába ütközött. A program bezárásra kerül.\n"
 
 #: src/inkscape.cpp:496
-msgid ""
-"Automatic backups of unsaved documents were done to following locations:\n"
+msgid "Automatic backups of unsaved documents were done to following locations:\n"
 msgstr "A nem mentett dokumentumokról mentés készült a következõ helyekre:\n"
 
 #: src/inkscape.cpp:497
 msgid "Automatic backup of following documents failed:\n"
-msgstr ""
-"Nem sikerült automatikus mentést készíteni a következõ dokumentumokról:\n"
+msgstr "Nem sikerült automatikus mentést készíteni a következõ dokumentumokról:\n"
 
 #: src/inkscape.cpp:659
 #, c-format
@@ -2338,12 +2328,11 @@ msgstr "Csomópont vagy vezérlõelem húzása megszakítva."
 
 #: src/main.cpp:128
 msgid "Print the Inkscape version number"
-msgstr ""
+msgstr "Az Inkscape verziószámának kiírása"
 
 #: src/main.cpp:130
 msgid "Do not use X server (only process files from console)"
-msgstr ""
-"Az X grafikus rendszer ne legyen használva (fájlok feldolgozása a konzolról)"
+msgstr "Az X grafikus rendszer ne legyen használva (fájlok feldolgozása a konzolról)"
 
 #: src/main.cpp:133
 msgid "Try to use X server (even if $DISPLAY is not set)"
@@ -2393,8 +2382,7 @@ msgstr "x0:y0:x1:y1"
 
 #: src/main.cpp:151
 msgid "The width of generated bitmap in pixels (overwrites dpi)"
-msgstr ""
-"A létrehozott bitkép szélessége képpontban (felülbírálja a DPI értéket)"
+msgstr "A létrehozott bitkép szélessége képpontban (felülbírálja a DPI értéket)"
 
 #: src/main.cpp:151
 msgid "WIDTH"
@@ -2476,20 +2464,17 @@ msgstr "szimmetrikus"
 
 #: src/nodepath.cpp:2726
 msgid "Drag nodes or control points to edit the path"
-msgstr ""
-"A lánc szerkesztéséhez helyezze át a csomópontokat vagy a kontrollpontokat"
+msgstr "A lánc szerkesztéséhez helyezze át a csomópontokat vagy a kontrollpontokat"
 
 #: src/nodepath.cpp:2740
-msgid ""
-"Select one path object with selector first, then switch back to node tool."
+msgid "Select one path object with selector first, then switch back to node tool."
 msgstr ""
 "Jelöljön ki egy láncot a kijelölõeszközzel, majd váltson vissza a "
 "csomóponteszközre."
 
 #: src/nodepath.cpp:2742
 #, c-format
-msgid ""
-"0 out of %i nodes selected. Click, Shift+click, drag around nodes to select."
+msgid "0 out of %i nodes selected. Click, Shift+click, drag around nodes to select."
 msgstr ""
 "%i csomópontból 0 van kijelölve. Kijelölés: kattintással (ha szükséges, "
 "Shifttel) vagy egy terület kijelölésével."
@@ -2611,14 +2596,12 @@ msgid "No objects to convert to path in the selection."
 msgstr "A kijelölésben nincs lánccá alakítható objektum."
 
 #: src/path-chemistry.cpp:399
-#, fuzzy
 msgid "Select one or more paths to reverse."
-msgstr "Jelöljön ki 2 vagy több objektumot a csoportosításhoz."
+msgstr "Jelöljön ki egy vagy több láncot a megfordításhoz."
 
 #: src/path-chemistry.cpp:424
-#, fuzzy
 msgid "No paths to reverse in the selection."
-msgstr "A kijelölésben nincs szétbontható lánc."
+msgstr "A kijelölésben nincs megfordítható lánc."
 
 #: src/rect-context.cpp:517
 #, c-format
@@ -2640,8 +2623,7 @@ msgstr "Áthelyezés: %s, %s"
 
 #: src/select-context.cpp:805
 msgid "Click selection to toggle scale/rotation handles"
-msgstr ""
-"A méretezési és az elforgatási mód közti váltáshoz kattintson a kijelölésre"
+msgstr "A méretezési és az elforgatási mód közti váltáshoz kattintson a kijelölésre"
 
 #. no items
 #: src/select-context.cpp:808
@@ -2694,8 +2676,7 @@ msgstr "Jelöljön ki legalább 2 objektumot a csoportosításhoz."
 
 #: src/selection-chemistry.cpp:254
 msgid "You cannot group objects from different groups or layers."
-msgstr ""
-"Eltérõ csoportban illetve szinten levõ objektumok nem foglalhatók csoportba."
+msgstr "Eltérõ csoportban illetve szinten levõ objektumok nem foglalhatók csoportba."
 
 #: src/selection-chemistry.cpp:302
 msgid "Select a group to ungroup."
@@ -2770,9 +2751,8 @@ msgid "Select a single clone to go to its original."
 msgstr "Válassza ki azt a klónt, amelynek eredetijét meg kívánja jelölni."
 
 #: src/selection-chemistry.cpp:1380
-#, fuzzy
 msgid "Select an object to tile."
-msgstr "Jelölje ki a klónozandó objektumot."
+msgstr "Jelölje ki a csempévé alakítandó objektumot."
 
 #: src/seltrans.cpp:749 src/seltrans.cpp:812
 #, c-format
@@ -2911,8 +2891,7 @@ msgid "Select at least 2 paths to perform a boolean operation."
 msgstr "Logikai mûveletekhez legalább 2 láncot ki kell jelölni."
 
 #: src/splivarot.cpp:110
-msgid ""
-"Select exactly 2 paths to perform difference, XOR, division, or path cut."
+msgid "Select exactly 2 paths to perform difference, XOR, division, or path cut."
 msgstr ""
 "Különbségképzés, kizáró VAGY, felosztás illetve láncelvágás esetén pontosan "
 "2 láncot kell kijelölni."
@@ -2941,8 +2920,7 @@ msgstr "A kijelölésben nincs körvonallal rendelkezõ lánc."
 
 #: src/splivarot.cpp:822
 msgid "Selected object is not a path, cannot inset/outset."
-msgstr ""
-"A kijelölt objektum nem lánc; zsugorítás illetve nyújtás nem végezhetõ."
+msgstr "A kijelölt objektum nem lánc; zsugorítás illetve nyújtás nem végezhetõ."
 
 #: src/splivarot.cpp:1021
 msgid "Select some paths to inset/outset."
@@ -3110,8 +3088,7 @@ msgstr "Tágulás:"
 
 #: src/toolbox.cpp:1465
 msgid "How much denser/sparser are outer revolutions; 1 = uniform"
-msgstr ""
-"Mennyivel sûrûbbek illetve ritkábbak a külsõ fordulatok; 1 = egyenletes"
+msgstr "Mennyivel sûrûbbek illetve ritkábbak a külsõ fordulatok; 1 = egyenletes"
 
 #: src/toolbox.cpp:1475
 msgid "Inner radius:"
@@ -3170,8 +3147,7 @@ msgid "Open arc"
 msgstr "Nyitott ellipszisív"
 
 #: src/toolbox.cpp:1936
-msgid ""
-"Switch between arc (unclosed shape) and segment (closed shape with two radii)"
+msgid "Switch between arc (unclosed shape) and segment (closed shape with two radii)"
 msgstr ""
 "Váltás ellipszisív (nem lezárt alakzat) és -cikk (lezárt alakzat két "
 "sugárral) közt"
@@ -3242,8 +3218,7 @@ msgstr ""
 "módosítása pedig gépeléssel."
 
 #: src/tools-switch.cpp:171
-msgid ""
-"Click to zoom in, Shift+click to zoom out, drag around the area to zoom in."
+msgid "Click to zoom in, Shift+click to zoom out, drag around the area to zoom in."
 msgstr ""
 "Nagyítás kattintással vagy a kívánt terület kijelölésével végezhetõ, "
 "kicsinyítés pedig Shift+kattintással."
@@ -3474,8 +3449,7 @@ msgstr "Klón_ozás"
 
 #: src/verbs.cpp:848
 msgid "Create a clone of selected object (a copy linked to the original)"
-msgstr ""
-"Klón (az eredetihez kapcsolt másolat) létrehozása a kijelölt objektumból"
+msgstr "Klón (az eredetihez kapcsolt másolat) létrehozása a kijelölt objektumból"
 
 #: src/verbs.cpp:849
 msgid "Unlin_k Clone"
@@ -3494,22 +3468,20 @@ msgid "Select the object to which the clone is linked"
 msgstr "Azon objektum kijelölése, amelyhez a klón kapcsolva van"
 
 #: src/verbs.cpp:853
-#, fuzzy
 msgid "_Tile"
-msgstr "_Fájl"
+msgstr "_Csempézés"
 
 #: src/verbs.cpp:854
 msgid "Convert selection to a rect with tiled pattern fill"
-msgstr ""
+msgstr "A kijelölés átalakítása csempézett téglalappá"
 
 #: src/verbs.cpp:855
-#, fuzzy
 msgid "_Untile"
-msgstr "Névtelen"
+msgstr "Csempézés me_gszüntetése"
 
 #: src/verbs.cpp:856
 msgid "Extract objects from a tiled pattern fill"
-msgstr ""
+msgstr "Objektumok kinyerése egy csempézett mintából"
 
 #: src/verbs.cpp:857
 msgid "Clea_r All"
@@ -3626,8 +3598,7 @@ msgstr "Lánc el_vágása"
 
 #: src/verbs.cpp:889
 msgid "Cut the bottom object's stroke into pieces, removing fill"
-msgstr ""
-"A hátulsó objektum körvonalának feldarabolása a kitöltés eltávolításával"
+msgstr "A hátulsó objektum körvonalának feldarabolása a kitöltés eltávolításával"
 
 #. TRANSLATORS: "outset": expand a shape by offsetting the object's path,
 #. i.e. by displacing it perpendicular to the path in each point.
@@ -3713,8 +3684,7 @@ msgstr "_Egyszerûsítés"
 
 #: src/verbs.cpp:921
 msgid "Simplify selected path(s) by removing extra nodes"
-msgstr ""
-"A kijelölt lánc(ok) egyszerûsítése az extra csomópontok eltávolításával"
+msgstr "A kijelölt lánc(ok) egyszerûsítése az extra csomópontok eltávolításával"
 
 #: src/verbs.cpp:922
 msgid "Cl_eanup"
@@ -3725,14 +3695,12 @@ msgid "Clean up selected path(s)"
 msgstr "A kijelölt lánc(ok) megtisztítása"
 
 #: src/verbs.cpp:924
-#, fuzzy
 msgid "_Reverse"
-msgstr "_Vonalzók"
+msgstr "Megfo_rdítás"
 
 #: src/verbs.cpp:925
-#, fuzzy
 msgid "Reverse direction of selected path(s)"
-msgstr "A kijelölt objektumok metszete"
+msgstr "A kijelölt lánc(ok) irányának megfordítása"
 
 #: src/verbs.cpp:926
 msgid "_Combine"
@@ -3758,8 +3726,7 @@ msgstr "Elfo_rgatás -90 fokkal"
 
 #: src/verbs.cpp:933
 msgid "Rotate selection 90 degrees clockwise"
-msgstr ""
-"A kijelölt objektumok elforgatása az óramutató járásának irányában 90 fokkal"
+msgstr "A kijelölt objektumok elforgatása az óramutató járásának irányában 90 fokkal"
 
 #: src/verbs.cpp:934
 msgid "Rotate 9_0 deg CCW"
@@ -4293,9 +4260,8 @@ msgid "Radial gradient"
 msgstr "Sugárirányú színátmenet"
 
 #: src/widgets/paint-selector.cpp:174
-#, fuzzy
 msgid "Pattern Fill"
-msgstr "Minta:"
+msgstr "Mintával való kitöltés"
 
 #: src/widgets/paint-selector.cpp:595
 msgid "No objects"
@@ -4306,14 +4272,12 @@ msgid "Multiple styles"
 msgstr "Többféle stílus"
 
 #: src/widgets/paint-selector.cpp:817
-#, fuzzy
 msgid "No patterns in document"
-msgstr "Nincs színátmenet a dokumentumban"
+msgstr "Nincs minta a dokumentumban"
 
 #: src/widgets/paint-selector.cpp:931
-#, fuzzy
 msgid "Pattern fill"
-msgstr "Minta:"
+msgstr "Mintával való kitöltés"
 
 #: src/widgets/sp-color-gtkselector.cpp:60
 msgid "System"
@@ -4638,3 +4602,4 @@ msgstr "Érték"
 
 #~ msgid "evenodd"
 #~ msgstr "páros-páratlan"
+
