--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/sp-path.cpp: Move some declarations to first use.
+
 2004-06-13  MenTaLguY  <mental@rydia.net>
 
 	* src/arc-context.cpp, src/desktop.cpp, src/desktop.h, src/document.cpp,
