--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2004-06-14  Carl Hetherington  <inkscape@carlh.net>
 
-	* src/prefs-utils.cpp:
+	* src/libnrtype/TextWrapper.cpp: Fix what looks like an off-by-one.
+
+	* ChangeLog, src/prefs-utils.cpp:
 	Fix bracketing typo that causes an array to be overrun.
 
 2004-06-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
