--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-15  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/select-toolbar.cpp: Greater conformance to CodingStyle.
+
 2004-06-14  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/libnrtype/TextWrapper.cpp: Fix what looks like an off-by-one.
