--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2004-06-15  Ted Gould  <ted@gould.cx>
+
+	* share/extensions/ai_input.inkmod:
+	Removing the command line arguement to specify line endings.
+
+	* src/print.cpp, src/print.h, src/sp-text.cpp,
+	src/extension/extension.cpp, src/extension/extension.h,
+	src/extension/implementation/implementation.cpp,
+	src/extension/implementation/implementation.h,
+	src/extension/internal/ps.cpp, src/extension/internal/ps.h:
+
+	Changing it so that the text to vector is it's own function.  This way it
+	can be used as a parameter in Postscript, but then can be easily used for
+	drivers which only support vector drawing.
+
 2004-06-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/select-toolbar.cpp: Cleanups and preparation for px units.
