--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-06-17  MenTaLguY  <mental@rydia.net>
+
+	* src/Makefile_insert, src/arc-context.cpp, src/arc-context.h,
+	  src/desktop-events.cpp, src/desktop.cpp, src/desktop.h,
+	  src/draw-context.cpp, src/dropper-context.cpp, src/event-context.cpp,
+	  src/event-context.h, src/file.cpp, src/interface.cpp, src/knot.cpp,
+	  src/managed.h, src/message-context.cpp, src/message-context.h,
+	  src/message-stack.cpp, src/message-stack.h, src/message.h,
+	  src/select-context.cpp, src/view.cpp, src/view.h,
+	  src/libnrtype/FontFactory.cpp, src/libnrtype/nr-type-primitives.h,
+	  src/widgets/font-selector.cpp:
+
+	  New status messages primitives (statusbar bug not fixed yet though).
+
 2004-06-17  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/helper/stock-items.cpp: fix a compiler warning.  Minor
