Tighter scoping for iteration var. Simplify some code by greater use of cheap sp_unit_get_by_id.
(bzr r3066)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/sp-namedview.cpp: Tighter scoping for iteration var.
+        Simplify some code by greater use of cheap sp_unit_get_by_id.
+
 2004-06-17  MenTaLguY  <mental@rydia.net>
 
 	* src/Makefile_insert, src/arc-context.cpp, src/arc-context.h,
