--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-06-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/mkdep.pl: Add `by mkdep.pl' to `automatically generated' line.
+
 	* src/dialogs/desktop-properties.cpp:
 	  Greater conformance to CodingStyle.  Add FIXME comment.
 
