--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/libnrtype/RasterFont.h, src/libnrtype/raster-glyph.h,
+	  src/libnrtype/raster-position.h:
+	  Move raster_glyph, raster_position from RasterFont.h to new files
+	  raster-glyph.h, raster-position.h.
+	* src/libnrtype/Makefile_insert: Add the new files to SOURCES.
+
 	* src/libnrtype/FontInstance.h, src/libnrtype/font-glyph.h,
 	  src/libnrtype/font-instance.h, src/libnrtype/font-style.h:
 	  Move font_glyph, font_instance, and font_style definitions from
